kubernetes/apps/base/ai-system/ollama/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  namespace: ai-system
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - 'ollama.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: ollama
          port: 11434
          weight: 100
